samples/_failures_safe/1761216417_c5c647_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6df470ca.c: In function ‘main’:
./samples/SAFE/__tmp_6df470ca.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
